# MarkClient

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: build.yml  main.yml
app/: CMakeLists.txt  JNI_Bridge.cpp  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/Icon/: IconLoader.kt
app/src/main/cpp/: CMakeLists.txt  Client.cpp  Client.h  main.cpp
app/src/main/cpp/modules/: Module.h  ModuleManager.cpp  ModuleManager.h
app/src/main/cpp/modules/combat/: Killaura.cpp  Killaura.h
app/src/main/cpp/modules/movement/: Fly.cpp  Fly.h
app/src/main/cpp/ui/: ImGuiManager.cpp  ImGuiManager.h  UIManager.cpp  UIManager.h
app/src/main/cpp/ui/Lib/: Tab.cpp  Tab.h  TextureManager.h  Window.cpp
app/src/main/cpp/ui/lib/: Tab.cpp  TextureManager.cpp  Window.cpp  Window.h
app/src/main/cpp/utils/: Logger.h
app/src/main/java/com/mark/client/: LoadLib.kt  MainActivity.kt  MarkClient.kt
app/src/main/res/values/: strings.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
